# Archuniverse

./: .clang-format  .gitignore  CMakeLists.txt  README.md
apps/demo/: main.cpp
apps/net_demo/: main.cpp
include/archuniverse/: archuniverse.hpp
include/archuniverse/ai/: ai_system.hpp  behavior.hpp  behaviors.hpp
include/archuniverse/combat/: bleed.hpp  combat.hpp  combat_manager.hpp
include/archuniverse/core/: context.hpp  event_bus.hpp  events.hpp  fight_type.hpp  game_loop.hpp  id.hpp  result.hpp  rng.hpp  stat.hpp  tickable.hpp  vec3.hpp
include/archuniverse/entities/: character.hpp  living_entity.hpp  monster.hpp  status_effect.hpp
include/archuniverse/items/: armor.hpp  effect.hpp  food.hpp  item.hpp  potion.hpp  special_effects.hpp  ware.hpp  weapon.hpp
include/archuniverse/net/: channel.hpp  client.hpp  loopback.hpp  protocol.hpp  server.hpp  tcp_channel.hpp
include/archuniverse/persistence/: snapshot.hpp
include/archuniverse/skills/: skill.hpp  skill_tree.hpp
include/archuniverse/world/: world.hpp
src/ai/: ai_system.cpp  behaviors.cpp
src/combat/: bleed.cpp  combat.cpp  combat_manager.cpp
src/core/: game_loop.cpp
src/entities/: character.cpp  living_entity.cpp  monster.cpp
src/items/: armor.cpp  food.cpp  item.cpp  potion.cpp  special_effects.cpp  weapon.cpp
src/net/: client.cpp  loopback.cpp  server.cpp  tcp_channel.cpp
src/persistence/: snapshot.cpp
src/skills/: skill.cpp  skill_tree.cpp
src/world/: world.cpp
tests/: CMakeLists.txt  test_ai.cpp  test_combat.cpp  test_core.cpp  test_items.cpp  test_net.cpp  test_persistence.cpp  test_skills.cpp
